[tool.poetry]
name = "picls"
version = "0.0.1"
description = "Synthesis framework using inhabitation in FCL with intersection types and limited support for type variables"
authors = ["Jan Bessai <jan.bessai@tu-dortmund.de>", "Andrej Dudenhefner <andrej.dudenhefner@cs.tu-dortmund.de>", "Christoph Stahl <christoph.stahl@tu-dortmund.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100
ignore = ["E731"]
