[tool.poetry]
name = "clsp"
version = "0.0.2"
description = "Type based synthesis framework using inhabitation in FCLP"
authors = ["Andrej Dudenhefner <andrej.dudenhefner@cs.tu-dortmund.de>", "Christoph Stahl <christoph.stahl@tu-dortmund.de>", "Jan Bessai <jan.bessai@tu-dortmund.de>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
exclude = [ ".venv" ]
venvPath = "."
venv = ".venv"

[tool.ruff]
line-length = 100
[tool.ruff.lint]
ignore = ["E731"]

[tool.black]
line-length = 100
